Fix alignment on logo profile page

--- a/src/profile.css
+++ b/src/profile.css
@@ -14,10 +14,8 @@ html, body {
 }
 
 .profile-logo {
-  flex-direction: column;
-  align-items: center;
-  margin: 24px 0 12px 0;
-  position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 h1 {
